@@ -1,21 +1,20 @@
 package hk.edu.polyu.comp.vlabcontroller.log;
 
+import hk.edu.polyu.comp.vlabcontroller.config.ProxyProperties;
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.config.AbstractFactoryBean;
+import org.springframework.cloud.context.config.annotation.RefreshScope;
 import org.springframework.context.ApplicationContext;
 import org.springframework.context.annotation.Primary;
-import org.springframework.core.env.Environment;
 import org.springframework.stereotype.Service;
 
 @Service(value = "logStorage")
 @Primary
+@RequiredArgsConstructor
+@RefreshScope
 public class LogStorageFactory extends AbstractFactoryBean<ILogStorage> {
-    private final Environment environment;
+    private final ProxyProperties proxyProperties;
     private final ApplicationContext applicationContext;
-
-    public LogStorageFactory(Environment environment, ApplicationContext applicationContext) {
-        this.environment = environment;
-        this.applicationContext = applicationContext;
-    }
 
     @Override
     public Class<?> getObjectType() {
@@ -24,10 +23,10 @@ public class LogStorageFactory extends AbstractFactoryBean<ILogStorage> {
 
     @Override
     protected ILogStorage createInstance() throws Exception {
-        ILogStorage storage = null;
+         ILogStorage storage;
 
-        String containerLogPath = environment.getProperty("proxy.container-log-path");
-        if (containerLogPath == null || containerLogPath.trim().isEmpty()) {
+        var containerLogPath = proxyProperties.getContainerLogPath();
+        if (containerLogPath == null || containerLogPath.isBlank()) {
             storage = new NoopLogStorage();
         } else if (containerLogPath.toLowerCase().startsWith("s3://")) {
             storage = new S3LogStorage();
